--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 
+<link rel="shortcut icon" href="favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 <script>
     function time() {
         var today = new Date();
