--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </script>
 
 <body onload="time()">
-    <center>
+    <center id="pos">
         <pre class="title">daniel.cricket</pre>
         <pre class="time" id="t"></pre>
     </center>
