--- a/index.html
+++ b/index.html
@@ -41,4 +41,12 @@
     </center>
 </body>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120448008-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-120448008-1');
+</script>
+
 </html>
