--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<title>daniel.cricket</title>
+<meta name="description" content="daniel.cricket">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0>
 <link rel="stylesheet" href="style.css" />
 <link rel="shortcut icon" href="favicon.ico" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120448008-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-120448008-1');
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-120448008-1');
 </script>
+</head>
+<body onload="time();">
+
+<div class="pos">
+  <pre class="title">daniel.cricket</pre>
+  <pre class="time" id="t"></pre>
+</div>
 
 <script>
 function time() {
@@ -42,13 +51,6 @@ function check(i) {
   return i;
 }
 </script>
-<head>
 
-<body onload="time();">
-  <div class="pos">
-    <pre class="title">daniel.cricket</pre>
-    <pre class="time" id="t"></pre>
-  </div>
 </body>
-
 </html>
