--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>daniel.cricket</title>
 <meta name="description" content="daniel.cricket">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120448008-1"></script>
