--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css" />
 <link rel="shortcut icon" href="favicon.ico" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120448008-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-120448008-1');
-</script>
 </head>
 <body onload="time();">
 
@@ -32,7 +25,7 @@ function time() {
   m = check(m);
   s = check(s);
 
-  amPM = (h >= 12)? 'pm' : 'am';
+  amPM = (h >= 12)? "pm" : "am";
 
   if(h > 12) {
     h -= 12;
