--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="pos">
   <pre class="title">daniel.cricket</pre>
-  <pre class="time" id="t"></pre>
+  <pre class="time" id="t">00:00:00</pre>
 </div>
 
 <script>
